add body sections, header/footer, and colors for header/footer, hero and quotes

--- a/index.html
+++ b/index.html
@@ -2,9 +2,34 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Nelson's Appliance Service</title>
+        <title>Business Name</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Test text</h1>
+        <div class="header">
+            Business Name
+            <ul>
+                <li><a href="#">Header link one</a></li>
+                <li><a href="#">Header link two</a></li>
+                <li><a href="#">Header link three</a></li>
+            </ul>
+        </div>
+        <div class="body">
+        <div class="hero">
+            This is the first section with business teaser (hero)
+        </div>
+        <div class="body2">
+            This is the second section with business info
+        </div>
+        <div class="quotes">
+            This is the third section with testimonials
+        </div>
+        <div class="body4">
+            This is the fourth section with the call to action
+        </div>
+    </div>
+        <div class="footer">
+            Copyright © My Company 2024
+        </div>
     </body>
 </html>
