separate business name and links in header

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     </head>
     <body>
         <div class="header">
-            Business Name
-            <ul>
+            <ul class="logo">
+                <li>Business Name</li>
+            </ul>
+            <ul class="links">
                 <li><a href="#">Header link one</a></li>
                 <li><a href="#">Header link two</a></li>
                 <li><a href="#">Header link three</a></li>
