add padding to hero text, button, image placeholder and divs for placeing

--- a/index.html
+++ b/index.html
@@ -17,9 +17,22 @@
             </ul>
         </div>
         <div class="body">
-        <div class="hero">
-            This is the first section with business teaser (hero)
+            <div class="hero">
+            <div class="hero-text">
+        <div class="hero-main">
+            This website is awesome
+        <div class="hero-secondary">
+            Information about the business goes here I guess
         </div>
+        <div class="button">
+            <button>Button Here</button>
+        </div>
+        </div>
+            </div>
+        <div class="image-placeholer">
+            Box here
+        </div>
+            </div>
         <div class="body2">
             This is the second section with business info
         </div>
