add bg, color, font color, size and border radius to hero button

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div class="hero-secondary">
             Information about the business goes here I guess
         </div>
-        <div class="button">
-            <button>Button Here</button>
+        <div>
+            <button class="button">Button Here</button>
         </div>
         </div>
             </div>
