add image placeholder and container size to hero main and secondary

--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
         <div class="hero-main">
             This website is awesome
         <div class="hero-secondary">
-            Information about the business goes here I guess
+            Information about the business goes here, things like saying "locally owned family business" and other buzz words that people tend to care about.
         </div>
         <div>
             <button class="button">Button Here</button>
         </div>
         </div>
             </div>
-        <div class="image-placeholer">
-            Box here
+
+        <div class="image-placeholder">
+            <span class="image-text">This is a placeholder for an image</span>
         </div>
+
             </div>
         <div class="body2">
             This is the second section with business info
