add padding to quotes, even flex to all body containers, smaller header/footer

--- a/index.html
+++ b/index.html
@@ -39,7 +39,14 @@
             This is the second section with business info
         </div>
         <div class="quotes">
-            This is the third section with testimonials
+            <div class="quotes-content">
+            This is the third section with testimonials. It would be good to somehow link to Google reviews so that this
+             could be a rotating field to display 5 star reviews, or even juist copy/paste the reviews and have them
+             on a carousel.
+            </div>
+            <div class="quotes-author">
+                - Some Person
+            </div>
         </div>
         <div class="body4">
             This is the fourth section with the call to action
