add background, text and button in call to action div

--- a/index.html
+++ b/index.html
@@ -49,7 +49,20 @@
             </div>
         </div>
         <div class="body4">
-            This is the fourth section with the call to action
+            <div class="blue-background">
+                <div class="cta-text">
+                    <div class="cta-text-main">
+                        Call to action! It's time!
+                    </div>
+                    <div class="cta-text-secondary">
+                        Sign up for our product by clicking that button right over there!
+                    </div>
+                </div>
+                <div>
+                <button class="button-two">
+                    Button here
+                </div>
+            </div>
         </div>
     </div>
         <div class="footer">
