html and css for information section

--- a/index.html
+++ b/index.html
@@ -1,54 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Business Name</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <div class="header">
-            <ul class="logo">
-                <li>Business Name</li>
-            </ul>
-            <ul class="links">
-                <li><a href="#">Header link one</a></li>
-                <li><a href="#">Header link two</a></li>
-                <li><a href="#">Header link three</a></li>
-            </ul>
-        </div>
-        <div class="body">
-            <div class="hero">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Business Name</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <div class="header">
+        <ul class="logo">
+            <li>Business Name</li>
+        </ul>
+        <ul class="links">
+            <li><a href="#">Header link one</a></li>
+            <li><a href="#">Header link two</a></li>
+            <li><a href="#">Header link three</a></li>
+        </ul>
+    </div>
+    <div class="body">
+        <div class="hero">
             <div class="hero-text">
-        <div class="hero-main">
-            This website is awesome
-        <div class="hero-secondary">
-            Information about the business goes here, things like saying "locally owned family business" and other buzz words that people tend to care about.
-        </div>
-        <div>
-            <button class="button">Button Here</button>
-        </div>
-        </div>
+                <div class="hero-main">
+                    This website is awesome
+                    <div class="hero-secondary">
+                        Information about the business goes here, things like saying "locally owned family business" and
+                        other buzz words that people tend to care about.
+                    </div>
+                    <div>
+                        <button class="button">Button Here</button>
+                    </div>
+                </div>
             </div>
 
-        <div class="image-placeholder">
-            <span class="image-text">This is a placeholder for an image</span>
-        </div>
-
+            <div class="image-placeholder">
+                <span class="image-text">This is a placeholder for an image</span>
             </div>
-        <div class="body2">
-            This is the second section with business info
+
+        </div>
+        <div class="info">
+            <div class="heading">
+                Some random information.
+            </div>
+            <div class="panels">
+                <div class="panel">
+                    <div class="image-placeholder-2"></div>
+                    <div class="panel-text">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="panel">
+                    <div class="image-placeholder-2"></div>
+                    <div class="panel-text">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="panel">
+                    <div class="image-placeholder-2"></div>
+                    <div class="panel-text">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="panel">
+                    <div class="image-placeholder-2"></div>
+                    <div class="panel-text">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="quotes">
             <div class="quotes-content">
-            This is the third section with testimonials. It would be good to somehow link to Google reviews so that this
-             could be a rotating field to display 5 star reviews, or even juist copy/paste the reviews and have them
-             on a carousel.
+                This is the third section with testimonials. It would be good to somehow link to Google reviews so that
+                this
+                could be a rotating field to display 5 star reviews, or even juist copy/paste the reviews and have them
+                on a carousel.
             </div>
             <div class="quotes-author">
                 - Some Person
             </div>
         </div>
-        <div class="body4">
+        <div class="cta">
             <div class="blue-background">
                 <div class="cta-text">
                     <div class="cta-text-main">
@@ -59,14 +91,15 @@
                     </div>
                 </div>
                 <div>
-                <button class="button-two">
-                    Button here
+                    <button class="button-two">
+                        Button here
                 </div>
             </div>
         </div>
     </div>
-        <div class="footer">
-            Copyright © My Company 2024
-        </div>
-    </body>
+    <div class="footer">
+        Copyright © My Company 2024
+    </div>
+</body>
+
 </html>
